--- a/.github/workflows/update-year.yml
+++ b/.github/workflows/update-year.yml
@@ -1,9 +1,8 @@
-
 name: Update README year GIF
 
 on:
   schedule:
-    cron: "30 8 14 8 *"  # 14 août à 08:30 UTC → 10:30 heure suisse
+    - cron: "30 8 14 8 *"  # 14 août à 08:30 UTC → 10:30 heure suisse
   workflow_dispatch:
 
 jobs:
@@ -11,18 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Install Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.x"
+
       - name: Run update script
         run: python update_gif.py
+
       - name: Show README content
         run: cat README.md
+
       - name: Commit changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md
-          git commit -m "Mise à jour de l'image year.gif"
+          git commit -m "Mise à jour de l'image year.gif" || echo "Aucun changement à committer"
           git push
