--- a/.github/workflows/update-year.yml
+++ b/.github/workflows/update-year.yml
@@ -3,7 +3,7 @@ name: Update README year GIF
 on:
   schedule:
     - cron: "30 8 14 8 *"  # 14 août à 08:30 UTC → 10:30 heure suisse
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 jobs:
   update:
@@ -27,5 +27,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md
-          git commit -m "Mise à jour de l'image year.gif" || echo "Aucun changement à committer"
+          git commit -m "Mise à jour de l'image year.gif" || echo "Aucun changement"
           git push
