--- a/.github/workflows/update-year.yml
+++ b/.github/workflows/update-year.yml
@@ -1,5 +1,8 @@
 name: Update README year GIF
 
+permissions:
+  contents: write
+
 on:
   schedule:
     - cron: "30 8 14 8 *"  # 14 août à 08:30 UTC → 10:30 heure suisse
